# varuna

./: .env.example  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
src/varuna/: __init__.py  __main__.py  cli.py  config.py  core.py  parser.py  scheduler.py
tests/: test_core.py  test_parser.py  test_scheduler.py
